# gui-connect-test

./: CMakeLists.txt  GuiManager.cpp  GuiManager.hpp  GuiObject.hpp  Main.qml  SampleWindow.hpp  Window0.qml  Window1.qml  main.cpp
